user/ingress-apps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-clusterip1
                port: 
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-clusterip2
                port: 
                  number: 80
